source/styles/scroll.css
:root {
  --scrollbar-color-track: transparent;
  --scrollbar-color-thumb: theme("colors.muted.DEFAULT");
  --scrollbar-color-thumb-active: theme("colors.muted.foreground");
  --scrollbar-color-thumb-hover: color-mix(
    in hsl,
    var(--scrollbar-color-thumb),
    var(--scrollbar-color-thumb-active) 50%
  );

  --scrollbar-width: thin;
  --scrollbar-width-legacy: 6px;
  --scrollbar-thumb-radius: theme("borderRadius.full");
}

html {
  overflow-x: clip;
}

html.lenis body {
  height: auto;
}

.lenis.lenis-smooth {
  scroll-behavior: auto !important;
}

.lenis.lenis-smooth [data-lenis-prevent] {
  overscroll-behavior: contain;
}

.lenis.lenis-stopped {
  overflow: hidden;
}

.lenis.lenis-scrolling iframe {
  pointer-events: none;
}

[data-scroll-reveal] {
  animation: scroll-reveal linear both;
  animation-timeline: view(block);
}

[data-scroll-away] {
  animation: scroll-away linear both;
  animation-timeline: view(block var(--header-height));
}

@keyframes scroll-reveal {
  entry 0%,
  entry 20% {
    opacity: 0;
  }

  entry 50% {
    opacity: 1;
  }
}

@keyframes scroll-away {
  exit 50% {
    opacity: 1;
  }

  exit 95% {
    opacity: 0;
  }
}

@supports selector(::-webkit-scrollbar) {
  html::-webkit-scrollbar {
    width: var(--scrollbar-width-legacy, 0);
  }

  html::-webkit-scrollbar-button {
    display: none;
  }

  html::-webkit-scrollbar-track {
    background-color: var(--scrollbar-color-track);
  }

  html::-webkit-scrollbar-thumb {
    background-color: var(--scrollbar-color-thumb);

    border-block: 2px solid transparent;
    border-radius: var(--scrollbar-thumb-radius);
    background-clip: content-box;
  }

  html::-webkit-scrollbar-thumb:hover {
    background-color: var(--scrollbar-color-thumb-hover);

    border-block: 2px solid transparent;
    border-radius: var(--scrollbar-thumb-radius);
    background-clip: content-box;
  }

  html::-webkit-scrollbar-thumb:active {
    background-color: var(--scrollbar-color-thumb-active);

    border-block: 2px solid transparent;
    border-radius: var(--scrollbar-thumb-radius);
    background-clip: content-box;
  }
}

@supports not selector(::-webkit-scrollbar) {
  html {
    scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
    scrollbar-width: var(--scrollbar-width);
  }
}

